src/tannen73/flux/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: go-service
  labels:
    app: go-service
spec:
  replicas: 1
  selector:
    matchLabels:
      app: go-service
  template:
    metadata:
      labels:
        app: go-service
    spec:
      containers:
        - name: go-service
          image: crgotraining.azurecr.io/tannen73:latest
          imagePullPolicy: Always
          ports:
            - name: c-port
              containerPort: 8080
          resources:
            requests:
              cpu: 100m
              memory: 15Mi
            limits:
              cpu: 100m
              memory: 15Mi
          startupProbe:
            httpGet:
              path: /start
              port: c-port
            failureThreshold: 30
            periodSeconds: 10
